tests/bad/frontend/noField.latte
class A {}


int main() {
	A a = new A;
	a.value = 22;
	return 0;
}
